--- a/templates/init.d/dynaTraceBackendServer.erb
+++ b/templates/init.d/dynaTraceBackendServer.erb
@@ -13,21 +13,21 @@
 # Required-Start: $network
 # Required-Stop: $network
 # X-UnitedLinux-Should-Start:
-# Default-Start: <%= $linux_service_start_runlevels %>
-# Default-Stop: <%= $linux_service_stop_runlevels %>
-# Description: Start/Stop dynaTrace FrontendServer daemon
+# Default-Start: <%= @linux_service_start_runlevels %>
+# Default-Stop: <%= @linux_service_stop_runlevels %>
+# Description: Start/Stop dynaTrace Server daemon
 ### END INIT INFO
 
 # To use this file in your environment, adjusting the following variables:
 # - DT_HOME     installation directory of dynaTrace software
 # - DT_OPTARGS  optional arguments (e.g. -vm, -instance, -server, etc.)
 # - DT_INSTANCE instance name - requires port offset in DT_OPTARGS
-DT_HOME=<%= $installer_prefix_dir %>/dynatrace
-DT_OPTARGS=
+DT_HOME=<%= @installer_prefix_dir %>/dynatrace
+DT_OPTARGS="-listen <%= @collector_port %>"
 DT_INSTANCE=
 
-DT_PRODUCT=FrontendServer
-DT_BINARY=dtfrontendserver
+DT_PRODUCT=Server
+DT_BINARY=dtserver
 
 DT_PIDFILE=/var/run/$DT_BINARY.pid
 if [ -n "$DT_INSTANCE" ]; then
@@ -60,7 +60,7 @@ case "$1" in
     else
       echo ${DT_HOME}/${DT_BINARY} -instance $DT_INSTANCE -bg $DT_OPTARGS
       su - dynatrace -c "${DT_HOME}/${DT_BINARY} -instance $DT_INSTANCE -bg $DT_OPTARGS"
-    fi    
+    fi
   else
     echo "dynaTrace $DT_PRODUCT daemon is already running!"
   fi
