--- a/templates/init.d/dynaTraceServer.erb
+++ b/templates/init.d/dynaTraceServer.erb
@@ -26,7 +26,7 @@
 # - DT_RUNASUSER  the user to run the Dynatrace process
 
 DT_HOME=<%= @params["installer_prefix_dir"] %>/dynatrace
-DT_OPTARGS="-listen <%= @params["collector_port"] %>"
+DT_OPTARGS=
 DT_FE_OPTARGS=
 
 DT_FE_PRODUCT=FrontendServer
