--- a/templates/init.d/dynaTraceCollector.erb
+++ b/templates/init.d/dynaTraceCollector.erb
@@ -6,7 +6,7 @@
 #
 # Copy this script to /etc/init.d and use chkconfig for enabling/disabling
 # the daemon. In order to run multiple Collectors on the same host,
-# further adjustments may be necessary. Depending on the target environment 
+# further adjustments may be necessary. Depending on the target environment
 # adjustments may be necessary.
 #
 ### BEGIN INIT INFO
@@ -40,7 +40,7 @@ DT_SHUTDOWN_WAIT=60
 
 OS_TYPE=`uname`
 
-DT_PIDFILE_DIR=/tmp
+DT_PIDFILE_DIR=<%= @dynatrace::pid_file_directory %>
 
 DT_PIDFILE=${DT_PIDFILE_DIR}/${DT_BINARY}63.pid
 if [ -n "${DT_INSTANCE}" ]; then
@@ -80,23 +80,23 @@ case "$1" in
           su "${DT_RUNASUSER}" -c "${DT_HOME}/${DT_BINARY} -bg ${DT_OPTARGS}"
         else
           su -c "${DT_HOME}/${DT_BINARY} -bg ${DT_OPTARGS}" "${DT_RUNASUSER}"
-        fi      
+        fi
         echo $! >${DT_PIDFILE}
-      fi  
+      fi
     else
       if [ -z "${DT_RUNASUSER}" ]; then
         echo "${DT_HOME}"/${DT_BINARY} -instance "${DT_INSTANCE}" -bg ${DT_OPTARGS}
         "${DT_HOME}"/${DT_BINARY} -instance "${DT_INSTANCE}" -bg ${DT_OPTARGS}
         echo $! >${DT_PIDFILE}
-      else        
+      else
         echo "${DT_HOME}"/${DT_BINARY} -instance "${DT_INSTANCE}" -bg ${DT_OPTARGS}
         if [ "$OS_TYPE" = 'SunOS' ]; then
           su "${DT_RUNASUSER}" -c "${DT_HOME}/${DT_BINARY} -instance ${DT_INSTANCE} -bg ${DT_OPTARGS}"
         else
           su -c "${DT_HOME}/${DT_BINARY} -instance ${DT_INSTANCE} -bg ${DT_OPTARGS}" "${DT_RUNASUSER}"
-        fi    
+        fi
         echo $! >${DT_PIDFILE}
-      fi  
+      fi
     fi
   else
     echo "Dynatrace ${DT_PRODUCT} daemon is already running!"
@@ -120,7 +120,7 @@ case "$1" in
       kill -9 ${PROCESSPID}
     fi
 
-    if [ -f "${DT_PIDFILE}" ]; then 
+    if [ -f "${DT_PIDFILE}" ]; then
       rm -f ${DT_PIDFILE}
     fi
   fi
