--- a/templates/init.d/dynaTraceServer.erb
+++ b/templates/init.d/dynaTraceServer.erb
@@ -40,7 +40,7 @@ DT_RUNASUSER=<%= @params["user"] %>
 # How long to wait for shutdown
 DT_SHUTDOWN_WAIT=60
 
-DT_PIDFILE_DIR=/tmp
+DT_PIDFILE_DIR=<%= @dynatrace::pid_file_directory %>
 
 DT_PIDFILE=${DT_PIDFILE_DIR}/${DT_BINARY}63.pid
 
